RESOLVED FIXED117806
REGRESSION: Cannot open Silverlight preferences via context menu
https://bugs.webkit.org/show_bug.cgi?id=117806
Summary REGRESSION: Cannot open Silverlight preferences via context menu
Anders Carlsson
Reported 2013-06-19 12:17:33 PDT
REGRESSION: Cannot open Silverlight preferences via context menu
Attachments
Patch (9.14 KB, patch)
2013-06-19 12:20 PDT, Anders Carlsson
bdakin: review+
Anders Carlsson
Comment 1 2013-06-19 12:20:26 PDT
Anders Carlsson
Comment 2 2013-06-19 13:06:04 PDT
Note You need to log in before you can comment on or make changes to this bug.