Source/WebKit2/PluginProcess/PluginProcess.h
@@ -58,6 +58,8 @@ public:
 #endif
 
     bool launchProcess(const String& launchPath, const Vector<String>& arguments);
+    bool openURL(const String& urlString, int32_t& status, String& launchedURLString);
+
 #endif
 
 private:
