Source/WebKit2/UIProcess/Plugins/PluginProcessProxy.h
@@ -136,6 +136,7 @@ private:
     void applicationDidBecomeActive();
     void openPluginPreferencePane();
     void launchProcess(const String& launchPath, const Vector<String>& arguments, bool& result);
+    void openURL(const String& url, bool& result, int32_t& status, String& launchedURLString);
 #endif
 
     void platformInitializePluginProcess(PluginProcessCreationParameters& parameters);
